floating button : z-index issue fixed.

--- a/src/styles/def/component/floatingbutton-structure.scss
+++ b/src/styles/def/component/floatingbutton-structure.scss
@@ -1,7 +1,7 @@
 
 .floatingbutton{
     
-  z-index: 1;
+  z-index: 501;
   text-align:center;
   border-color: $borderColor;
   cursor: pointer;
